--- a/OC/config.plist
+++ b/OC/config.plist
@@ -30,6 +30,22 @@
 				<key>Path</key>
 				<string>SSDT-TB3.aml</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT-EC-USBX.aml</string>
+				<key>Path</key>
+				<string>SSDT-EC-USBX.aml</string>
+				<key>Enabled</key>
+				<true/>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT-UIAC.aml</string>
+				<key>Path</key>
+				<string>SSDT-UIAC.aml</string>
+				<key>Enabled</key>
+				<true/>
+			</dict>
 		</array>
 		<key>Delete</key>
 		<array>
@@ -107,6 +123,11 @@
 				<data>cKEAAA==</data>
 				<key>layout-id</key>
 				<data>BwAAAA==</data>
+			</dict>
+			<key>PciRoot(0x0)/Pci(0x1C,0x3)/Pci(0x0,0x0)</key>
+			<dict>
+				<key>device-id</key>
+				<data>8hUAAA==</data>
 			</dict>
 		</dict>
 		<key>Delete</key>
